chore: Fix remaining sonatype complaints